--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -4,7 +4,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 100px;
+    gap: 40px;
 }
 
 .menu-container {
@@ -70,4 +70,9 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#map {
+    height: 320px;
+    width: 500px;
 }
