--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -72,7 +72,23 @@ footer {
     align-items: center;
 }
 
-#map {
-    height: 320px;
-    width: 500px;
+
+.controls {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+#search-button {
+    padding: 10px 20px;
+    height: 30px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: base.$font-color-dark;
+    background-color: lightblue;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
 }
